feat: refactor error handling and improve statement sequence handling